# Dosadi

./: AGENTS.md  README.md  env.py  pyproject.toml  run_founding_wakeup_mvp.py  simulate_tick.py  simulation.py
docs/: Dosadi_Agent_Action_API_v1.md  Dosadi_Agents_v1.md  Dosadi_Day0_Dry_Run_Playbook_v1.md  Dosadi_Environment_Dynamics_v1.md  Dosadi_Factional_and_Governance_v1.md  Dosadi_Global_Schemas_v1.md  Dosadi_Market_Microstructure_v1.md  Dosadi_Rumors_and_Information_v1.md  Dosadi_Security_Loop_v1.md  Dosadi_Succession_Laws_v1.md  Dosadi_System_Logic_Architecture_v1.md  Dosadi_Task_Selection_and_Utility_v1.md  Dosadi_Temporal_Simulation_v1.md  Dosadi_Work_and_Labor_Markets_v1.md  README.md  agents_and_suits.md  design_log.md  development_plan.md  ethics_and_behavioral_economics.md  governance_and_law.md  industry_and_economy.md  overview.md  perception_and_information.md  prime_features_for_founding_wakeup.md  resources_and_energy.md  rumor_and_social_information.md  simulation_architecture.md  technical_interoperability.md  todos.md  tone_and_theme.md  world_notes.md  worldbuilding.md
dosadi_skeleton_v1/: LICENSE  README.md
tests/: test_admin_debug.py  test_admin_log.py  test_advanced_facilities_v1.py  test_banking_debt_patronage_v1.py  test_belief_formation.py  test_border_control_customs_v1.py  test_careers_v1.py  test_chronic_physical_updates.py  test_chronic_physiological_goals.py  test_civil_war_fragmentation_v1.py  test_comms_failure_jamming_v1.py  test_constitution_rights_regimes_v1.py  test_construction_pipeline_v2.py  test_construction_projects.py  (+94 more)
(+594 files in other folders)
