[project]
name = "dosadi"
version = "0.1.0"
description = "Core simulation primitives for the Dosadi project"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "doc(id): mark tying a test to a documentation source of truth",
]
